# linuxgamebench

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  TESTING.md  pyproject.toml
config/: benchmark.yaml
docs/: haircolor-privacy.html
server/: main.py
server/static/: index.html
src/linux_game_benchmark/: cli.py
src/linux_game_benchmark/analysis/: metrics.py  report_generator.py
src/linux_game_benchmark/api/: __init__.py  auth.py  client.py
src/linux_game_benchmark/benchmark/: __init__.py  game_launcher.py  runner.py  storage.py  validation.py
src/linux_game_benchmark/config/: __init__.py  preferences.py  settings.py
src/linux_game_benchmark/games/: __init__.py  game_finder.py  registry.py
src/linux_game_benchmark/gui/: __init__.py  app.py  constants.py  icon_gen.py  main_window.py  resources.py  signals.py  workers.py
src/linux_game_benchmark/gui/views/: __init__.py  auth_dialog.py  benchmark_results.py  benchmark_view.py  game_card.py  games_view.py  my_benchmarks_view.py  settings_view.py  steamdeck_view.py  system_info_view.py
src/linux_game_benchmark/gui/widgets/: __init__.py  auth_status.py  fps_display.py  game_selector.py  loading_overlay.py  profile_manager.py  recording_monitor.py  settings_panel.py  toast.py
src/linux_game_benchmark/mangohud/: config_manager.py
src/linux_game_benchmark/steam/: library_scanner.py
src/linux_game_benchmark/system/: hardware_info.py
src/linux_game_benchmark/utils/: formatting.py
tests/e2e/: test_overview_ui.py
tests/unit/: __init__.py  test_auth.py  test_validation.py
