[project]
name = "linux-game-benchmark"
version = "0.1.38"
description = "Automated gaming benchmark tool for Linux - measures FPS, stutter, frame pacing and more"
authors = [
    { name = "derbe" }
]
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
keywords = ["benchmark", "gaming", "linux", "steam", "proton", "fps", "mangohud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Benchmark",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-playwright>=0.4.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
reports = [
    "plotly>=5.0.0",
    "jinja2>=3.0.0",
]

[project.scripts]
lgb = "linux_game_benchmark.cli:app"
linux-game-benchmark = "linux_game_benchmark.cli:app"

[project.urls]
Homepage = "https://github.com/derbe/linux-game-benchmark"
Repository = "https://github.com/derbe/linux-game-benchmark"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linux_game_benchmark"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
